tests/baselines/reference/checkJsdocTypeTagOnExportAssignment3.errors.txt
a.js(10,16): error TS2739: Type '{ c: number; }' is missing the following properties from type 'Foo': a, b


==== checkJsdocTypeTagOnExportAssignment3.js (0 errors) ====
    
==== a.js (1 errors) ====
    /**
     * @typedef {Object} Foo
     * @property {boolean} a
     * @property {boolean} b
     */
    
    const bar = { c: 1 };
    
    /** @type {Foo} */
    export default bar;
                   ~~~
!!! error TS2739: Type '{ c: number; }' is missing the following properties from type 'Foo': a, b
    
==== b.js (0 errors) ====
    import a from "./a";
    a;
    